--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bootstrap": "^5.1.3",
     "gsap": "^3.10.4",
     "sass": "^1.53.0",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-scrollmagic": "^1.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
